...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            />

        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add a location" />
        <Button
            android:id="@+id/buttonPersonalizeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Personalize Layout" />
    </LinearLayout>

    <!-- Log Out Button -->
    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log Out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
...
